--- a/services/backend/.dockerignore
+++ b/services/backend/.dockerignore
@@ -1,10 +1,135 @@
+# =============================================================================
+# Docker ignore file for NestJS Backend Application
+# =============================================================================
+# Excludes unnecessary files from Docker build context for faster builds
+
+# Dependencies
 node_modules
-dist
-.git
-.gitignore
-README.md
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+
+# Environment files
 .env
-.env.local
+.env*.local
+.env.production
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
 .nyc_output
-coverage
-.turbo
+
+# ESLint cache
+.eslintcache
+
+# Prettier cache
+.prettiercache
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Temporary folders
+tmp/
+temp/
+
+# Git
+.git/
+.gitignore
+
+# Docker
+Dockerfile*
+.dockerignore
+
+# Documentation
+README.md
+*.md
+
+# Test files
+**/*.test.*
+**/*.spec.*
+__tests__/
+test/
+tests/
+
+# Linting and formatting
+.eslintrc*
+.prettierrc*
+.editorconfig
+
+# TypeScript
+*.tsbuildinfo
+
+# Turbo
+.turbo/
+
+# Database
+*.db
+*.sqlite
+
+# Uploads (will be mounted as volume)
+uploads/
+
+# Local development
+.local
+
+# Prisma migrations (included selectively)
+# prisma/migrations/
+
+# Backup files
+*.backup
+*.bak
