feat: Implement comprehensive GitHub Actions CI pipeline for monorepo
Created robust CI/CD pipeline with automated quality checks, testing, and security:

🚀 Main CI Pipeline (.github/workflows/ci.yml):
- Multi-job workflow with dependency management and parallel execution
- Triggers: Pull requests and pushes to main/develop branches
- Concurrency control to cancel in-progress runs for efficiency
- Environment setup with Node.js 20, pnpm 8, and telemetry disabled

🔧 Job Architecture:
1. Setup and Validation:
   * Repository checkout with full history for affected package detection
   * Node.js and pnpm setup with intelligent caching strategy
   * Dependency installation with frozen lockfile for reproducibility
   * Workspace structure validation and package discovery
   * Cache key generation for optimal cache hit rates

2. Lint Job:
   * ESLint execution across all packages with strict rules
   * Prettier formatting validation for consistent code style
   * TypeScript type checking with strict mode enforcement
   * Parallel execution with setup job dependency

3. Build Job (Matrix Strategy):
   * Matrix build strategy for parallel package compilation
   * Three groups: shared packages, applications, services
   * Dependency-aware building (shared → apps → services)
   * Build artifact caching with commit SHA keys
   * Prisma client generation for backend services

4. Test Job:
   * Comprehensive testing with PostgreSQL and Redis services
   * Unit tests across all packages with coverage reporting
   * Integration tests with real database connections
   * Test database setup with migrations and seeding
   * Codecov integration for coverage tracking

5. Security Audit:
   * npm/pnpm audit for known vulnerabilities
   * Dependency security analysis with moderate audit level
   * Future-ready for additional security tool integration

6. Docker Build Test:
   * Multi-platform Docker build validation (AMD64)
   * Matrix strategy for frontend and backend services
   * Buil

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "turbo build",
     "test": "turbo test",
+    "test:e2e": "turbo test:e2e",
+    "test:coverage": "turbo test:coverage",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,yaml,yml}\"",
@@ -14,14 +16,32 @@
     "clean": "turbo clean",
     "type-check": "turbo type-check",
     "install:all": "pnpm install",
-    "update:all": "pnpm -r update"
+    "update:all": "pnpm -r update",
+    "audit": "pnpm audit --audit-level moderate",
+    "audit:fix": "pnpm audit --fix",
+    "outdated": "pnpm -r outdated",
+    "ci:setup": "pnpm install --frozen-lockfile",
+    "ci:build": "pnpm build",
+    "ci:test": "pnpm test",
+    "ci:lint": "pnpm lint && pnpm format:check && pnpm type-check",
+    "ci:audit": "pnpm audit",
+    "docker:build": "./scripts/docker-build.sh",
+    "docker:build:frontend": "cd apps/frontend && ./build.sh",
+    "docker:build:backend": "cd services/backend && ./build.sh",
+    "db:setup": "./scripts/db-setup.sh up",
+    "db:reset": "./scripts/db-setup.sh reset",
+    "prisma:setup": "./scripts/setup-prisma.sh setup"
   },
   "keywords": [
     "workspace",
     "monorepo",
-    "pnpm"
+    "pnpm",
+    "nextjs",
+    "nestjs",
+    "prisma",
+    "docker"
   ],
-  "author": "",
+  "author": "Nexus Team",
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
@@ -33,5 +53,13 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/appliedinnovationcorp/nexus-v4.git"
+  },
+  "bugs": {
+    "url": "https://github.com/appliedinnovationcorp/nexus-v4/issues"
+  },
+  "homepage": "https://github.com/appliedinnovationcorp/nexus-v4#readme"
 }
