--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -49,8 +49,8 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
     "helmet": "^8.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
@@ -65,6 +65,9 @@
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
