feat: implement advanced CI security gates with comprehensive scanning
- Add multi-layer security scanning pipeline with CodeQL, Trivy, and TruffleHog
- Implement automated merge blocking for high/critical vulnerabilities
- Create comprehensive security policy enforcement workflows
- Add local security validation script for pre-commit checks
- Configure Dependabot for automated security updates
- Enhance branch protection with security gate requirements
- Integrate security scanning with staging and production deployments

Security scanning coverage:
- SAST: CodeQL for JavaScript/TypeScript vulnerability detection
- Container: Trivy for container and dependency vulnerabilities
- Secrets: TruffleHog for exposed credentials and API keys
- Dependencies: npm audit with severity thresholds
- Infrastructure: Checkov for Terraform security best practices
- Docker: Hadolint for Dockerfile security compliance

Security gates:
- Critical vulnerabilities: Zero tolerance - immediate merge block
- High vulnerabilities: Review required before merge
- Secret detection: Immediate merge block
- Container vulnerabilities: Deployment blocking for critical issues
- Infrastructure security: Compliance validation required

Key features:
- Automated security scanning on every push and PR
- SARIF integration with GitHub Security tab
- Comprehensive security reporting and PR comments
- Local security validation tooling
- Security policy documentation and incident response
- Integration with existing staging validation gates

This ensures no high or critical security vulnerabilities can reach
production, significantly improving application security posture.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  # Enable version updates for npm (pnpm)
+  # Enable Dependabot for npm dependencies
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
@@ -13,51 +13,66 @@ updates:
     assignees:
       - "nexus-team"
     commit-message:
-      prefix: "deps"
+      prefix: "security"
       include: "scope"
-    labels:
-      - "dependencies"
-      - "automated"
+    # Only create PRs for security updates and major version updates
     ignore:
-      # Ignore major version updates for stable packages
-      - dependency-name: "react"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "next"
-        update-types: ["version-update:semver-major"]
-      - dependency-name: "@nestjs/*"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: "*"
+        update-types: ["version-update:semver-patch", "version-update:semver-minor"]
+    # Group related updates
+    groups:
+      security-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "security"
+      major-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "version-update:semver-major"
 
-  # Enable version updates for GitHub Actions
-  - package-ecosystem: "github-actions"
+  # Enable Dependabot for Docker dependencies
+  - package-ecosystem: "docker"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "monday"
       time: "09:00"
+    reviewers:
+      - "nexus-team"
+    assignees:
+      - "nexus-team"
     commit-message:
-      prefix: "ci"
+      prefix: "security"
       include: "scope"
-    labels:
-      - "github-actions"
-      - "automated"
 
-  # Enable version updates for Docker
-  - package-ecosystem: "docker"
-    directory: "/apps/frontend"
+  # Enable Dependabot for GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/.github/workflows"
     schedule:
       interval: "weekly"
+      day: "monday"
+      time: "09:00"
+    reviewers:
+      - "nexus-team"
+    assignees:
+      - "nexus-team"
     commit-message:
-      prefix: "docker"
-    labels:
-      - "docker"
-      - "automated"
+      prefix: "security"
+      include: "scope"
 
-  - package-ecosystem: "docker"
-    directory: "/services/backend"
+  # Enable Dependabot for Terraform
+  - package-ecosystem: "terraform"
+    directory: "/infrastructure/terraform"
     schedule:
       interval: "weekly"
+      day: "monday"
+      time: "09:00"
+    reviewers:
+      - "nexus-team"
+    assignees:
+      - "nexus-team"
     commit-message:
-      prefix: "docker"
-    labels:
-      - "docker"
-      - "automated"
+      prefix: "security"
+      include: "scope"
